@@ -527,7 +527,7 @@ AP_DECLARE(void) ap_log_pid(apr_pool_t *p, const char *fname)
     mypid = getpid();
     if (mypid != saved_pid 
          && apr_stat(&finfo, fname, APR_FINFO_MTIME, p) == APR_SUCCESS) {
-      /* WINCH and HUP call this on each restart.
+      /* AP_SIG_GRACEFUL and HUP call this on each restart.
        * Only warn on first time through for this pid.
        *
        * XXX: Could just write first time through too, although
